--- a/src/LSI/MarketBundle/Resources/views/market/modifier.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/market/modifier.html.twig
@@ -4,34 +4,33 @@
     <div id="page" class="row">
         <div class="">
             <h2>Modifier l'annonce</h2>
-            <h3> Informations générales</h3>
+            <h3>Informations Générales </h3>
             {{ form_start(form, {'attr' : {'claas' : 'form-control', 'novalidate':'novalidate'}}) }}
             <div class="col-xs-6 col-md-6 col-lg-6">
                 <div class="form-group">
-                    {#{{ form_label(form.titre) }}#}
                     {{ form_row(form.titre) }}
                 </div>
                 {{ form_errors(form.titre) }}
                 <div class="form-group">
-                    {#{{ form_label(form.description) }}#}
                     {{ form_row(form.description) }}
                 </div>
                 {{ form_errors(form.description) }}
                 <div class="form-group">
-                    {#{{ form_label(form.prixDefaut) }}#}
                     {{ form_row(form.prixDefaut) }}
                 </div>
                 {{ form_errors(form.prixDefaut) }}
                 <div class="form-group">
-                    {#{{ form_label(form.regleCond) }}#}
                     {{ form_row(form.regleCond) }}
                 </div>
                 {{ form_errors(form.regleCond) }}
                 <div class="form-group">
-                    {#{{ form_label(form.categorie) }}#}
                     {{ form_row(form.categorie) }}
                 </div>
                 {{ form_errors(form.categorie) }}
+                <div class="form-group">
+                    {{ form_row(form.typeAnnul) }}
+                </div>
+                {{ form_errors(form.typeAnnul)}}
             </div>
             <div class="col-xs-6 col-md-6 col-lg-6">
             <div class="form-group">
@@ -54,12 +53,11 @@
                     {{ form_widget(form.images, {'attr' : {'onchange' : 'loadFile(event)'}}) }}
                 </div>
                 {{ form_errors(form.images) }}
-
                 <div class="row">
                     <div class="col-md-offset-1">
-                        {#{% for images in form.images %}
+                    {# {% for images in form.images %}
                         <img id="output" src="{{ asset(images.webPath) }}"/>
-                        {% endfor %}#}
+                    {% endfor %} #}
                     </div>
                 </div>
                 <br/> <br/>
