--- a/src/LSI/MarketBundle/Resources/views/market/dupliquer.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/market/dupliquer.html.twig
@@ -1,34 +1,36 @@
 {% extends '::layout.html.twig' %}
 
+{% block title %}
+    Ajout d'une annonce
+{% endblock %}
+
 {% block body %}
     <div id="page" class="row">
         <div class="">
             <h2>Créer une nouvelle annonce</h2>
-             <h3>Informations générales</h3>
-            {{ form_start(form, {'attr' : {'claas' : 'form-control'}}) }}
+            <h3>Informations générales</h3>
+            {{ form_start(form, {'attr' : {'claas' : 'form-control', 'novalidate':'novalidate'}}) }}
             <div class="col-xs-6 col-md-6 col-lg-6">
                 <div class="form-group">
                     {#{{ form_label(form.titre) }}#}
-                    {{ form_row(form.titre) }}
+                    {{ form_row(form.titre, {'attr': {'placeholder': 'Titre de l\'anonnce'}}) }}
                 </div>
                 {{ form_errors(form.titre) }}
                 <div class="form-group">
                     {#{{ form_label(form.description) }}#}
-                    {{ form_row(form.description) }}
+                    {{ form_row(form.description, {'attr': {'placeholder': 'Texte descriptif sur l\'annonce'}}) }}
                 </div>
                 {{ form_errors(form.description) }}
                 <div class="form-group">
                     {#{{ form_label(form.prixDefaut) }}#}
-                    {{ form_row(form.prixDefaut) }}
+                    {{ form_row(form.prixDefaut, {'attr': {'placeholder': 'Prix TTC de la location'}}) }}
                 </div>
                 {{ form_errors(form.prixDefaut) }}
                 <div class="form-group">
-                    {#{{ form_label(form.regleCond) }}#}
-                    {{ form_row(form.regleCond) }}
+                    {{ form_row(form.regleCond, {'attr': {'placeholder': 'Règle ou conditions de la location'}}) }}
                 </div>
                 {{ form_errors(form.regleCond) }}
                 <div class="form-group">
-                    {#{{ form_label(form.categorie) }}#}
                     {{ form_row(form.categorie) }}
                 </div>
                 {{ form_errors(form.categorie) }}
@@ -38,7 +40,7 @@
                 {{ form_errors(form.typeAnnul)}}
             </div>
             <div class="col-xs-6 col-md-6 col-lg-6">
-            <div class="form-group">
+                <div class="form-group">
                     {{ form_row(form.adresse.pays, {'attr': {'placeholder': 'Donner le pays'}}) }}
                 </div>
                 {{ form_errors(form.adresse.pays) }}
@@ -55,30 +57,103 @@
                 </div>
                 {{ form_errors(form.adresse.codePostal) }}
 
-                <div class="form-group">
-                    {{ form_widget(form.images, {'attr' : {'onchange' : 'loadFile(event)'}}) }}
+                <div class="form-group" id="" data-prototype="">
+                    {{ form_widget(form.images) }}
+                    <input type="button" id="add_code" value="autres images" class="btn btn-warning pull-right"/>
                 </div>
                 {{ form_errors(form.images) }}
-
-                <div class="row">
-                    <div class="col-md-offset-1">
-                        <img id="output" src="{{ asset(img) }}"/>
-                    </div>
+                
+                <div class="form-group">
+                    {{ form_widget(form.save, { 'label': 'Ajouter l\'annonce', 'attr' : {'class' : 'btn btn-success',}}) }}
                 </div>
-                <br/> <br/>
-                {{ form_widget(form.save, {'label':'Créer l\'annonce','attr' : {'class' : 'btn btn-warning'}}) }}
-                {{ form_end(form) }}
             </div>
+            {{ form_end(form) }}
         </div>
     </div>
+
 {% endblock %}
 
 {% block javascripts %}
+
     {{ parent() }}
+
     <script>
-        var loadFile = function(event) {
-            var output = document.getElementById('output');
-            output.src = URL.createObjectURL(event.target.files[0]);
-        };
+        $(document).ready(function () {
+            // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
+            var $container = $('div#lsi_marketbundle_annonce_images');
+
+            // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
+            var index = $container.find(':input').length;
+
+            // On ajoute un nouveau champ à chaque click sur le bouton
+            $('#add_code').click(function (e) {
+                addImage($container);
+                e.preventDefault(); // Pour éviter qu'un # apparaissent dans l'URL
+                return false;
+            });
+
+            // On ajoute automatiquement le 1er champ sans le bouton de suppression
+            if ( index == 0 ){
+                addImage($container);
+            }else{
+                // S'il existe déjà des champs de codes
+                $container.children('div').each(function () {
+                    addDeleteLink($(this));
+                });
+            }
+
+            // Fonction pour ajouter un formulaire de code postal
+            function addImage($container) {
+                var template;
+
+                if (index == 0){
+                    template = $container.attr('data-prototype')
+                        .replace(/__name__label__/g, 'Image 1')
+                        .replace(/__name__/g, index)
+                    ;
+                }else{
+                    template = $container.attr('data-prototype')
+                        .replace(/__name__label__/g, 'Image '+ (index +1))
+                        .replace(/__name__/g, index)
+                    ;
+                }
+
+                // On crée un objet jquery qui contiendra le template
+                var $prototype = $(template);
+
+                // On ajoute au prototype un lien pour pouvoir supprimer le code postal
+                if(index == 0){
+
+                }else{
+                    addDeleteLink($prototype);
+                }
+
+                // On ajoute le prototype modifié à la fin de la balise <div>
+                $container.append($prototype);
+
+                // On incrémente l'index
+                index++;
+            }
+
+            // La fonction pour supprimer un code postal
+            function addDeleteLink($prototype) {
+                // Création du bouton
+                var $deleteButton = $('<input type="button" value="Supprimer" class="btn btn-danger"/>');
+
+                // Ajout du bouton
+                $prototype.append($deleteButton);
+
+                // Ajout d'un listener sur le clic du lien pour supprimer la catégorie
+                $deleteButton.click(function(e) {
+                    $prototype.remove();
+                    if (index > 0){
+                        index --;}
+                    e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+
+                    return false;
+
+                });
+            }
+        })
     </script>
 {% endblock javascripts %}
