--- a/src/LSI/MarketBundle/Resources/views/layout_administre.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout_administre.html.twig
@@ -25,6 +25,14 @@
                                     <li><a href="{{ path('ls_imarket_traitement_msgrecu') }}">Messagerie</a></li>
                                 </div>
                             </div>
+                            <div class="dropdown">
+                                <button class="dropdown-toggle" type="button" data-toggle="dropdown">Messagerie
+                                    <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path('ls_imarket_traitement_msgrecu') }}">Messages recus</a></li>
+                                    <li><a href="{{ path('ls_imarket_traitement_msgenvoye') }}">Messages envoyes</a></li>
+                                </ul>
+                            </div>
                         </div>
 
                         <p style="height: 150px;"></p>
