--- a/src/LSI/MarketBundle/Resources/views/reservation/mesreservations.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/reservation/mesreservations.html.twig
@@ -36,7 +36,7 @@
                             <td><strong>En attente de validation</strong></td>
                         {% endif %}
                         <td>
-                            <a class="btn btn-success" href="{{ path('ls_imarket_traitement_demandeur_reservation', {'id': reservation.id}) }}">Consulter</a>
+                            <a class="btn btn-success" href="{{ path('ls_imarket_traitement_demandeur_reservation') }}">Consulter</a>
                         </td>
                     </tr>
                 {% else %}
