--- a/src/LSI/MarketBundle/Resources/views/market/reponsemgs.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/market/reponsemgs.html.twig
@@ -11,7 +11,7 @@
 <h2 style="text-align: center; position: relative; top: 20px; font-weight: bold; font-family: Arial, Helvetica, sans-serif  ">REPONDRE A L'OFFREUR</h2>
 <div class="row" id="repmsgrecu">
     <div class="col-lg-6 well"  style="width: 500px; position: relative; left: 450px; top: 120px">
-        {{ form_start(formrepmsg, {'method': 'POST'}) }}
+        {{ form_start(formrepmsg, {'method': 'GET'}) }}
         {{ form_label(formrepmsg.reponse, 'Reponse') }}
         {{ form_widget(formrepmsg.reponse) }}
         <br>
